cmake lists update

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,6 @@ include_directories(${tent-client-cpp_SOURCE_DIR}/src)
 file(GLOB_RECURSE tent-client-source
     ${tent-client-cpp_SOURCE_DIR}/src/*.cpp)
 
-
 include_directories(${tent-client-cpp_SOURCE_DIR}/vendor/gtest-1.6.0/include)
 include_directories(${tent-client-cpp_SOURCE_DIR}/vendor/rapidjson/include)
 # add google test
@@ -22,14 +21,12 @@ ExternalProject_Add(googletest
 ExternalProject_Get_Property(googletest INSTALL_DIR)
 set(GT_DIR ${INSTALL_DIR})
 
-message(STATUS "GOOGLE TEST INSTALL DIR : ")
-message(STATUS ${GT_DIR})
-
 add_library(google_test_lib STATIC IMPORTED)
 set_property(TARGET google_test_lib PROPERTY IMPORTED_LOCATION ${GT_DIR}/src/googletest-build/libgtest.a)
 
 add_executable(tests 
                client_tests.cpp
+               ${tent-client-source}
                )
 target_link_libraries (tests 
                        google_test_lib
